--- a/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/index.html
@@ -215,6 +215,9 @@
                     <p>We provide top-notch digital marketing strategies including SEO, PPC, and Social Media Management to help you reach your audience and increase revenue.</p>
                   </div>
                   <div class="col-lg-12">
+                                  <div class="gradient-button">
+                <a href="#contact">Start Your Campaign Today</a>
+              </div>
                     <div class="white-button scroll-to-section">
                       <a href="#contact">Contact Us <i class="fas fa-envelope"></i></a>
                     </div>
@@ -629,4 +632,5 @@
     }
   </script>
 </body>
+
 </html>
