--- a/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/index.html
@@ -181,7 +181,7 @@
         <div class="col-12">
           <nav class="main-nav">
             <a href="index.html" class="logo">
-              <img src="assets/images/Gemini_Generated_Image_beadecbeadecbead.png" alt="Digital Market Co">
+              <img src="assets/images/logo1.png" alt="Digital Market Co">
             </a>
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
@@ -562,7 +562,7 @@
           <div class="footer-widget">
             <h4>Digital Market Co.</h4>
             <div class="logo">
-              <img src="assets/images/Gemini_Generated_Image_beadecbeadecbead.png.png" alt="">
+              <img src="assets/images/logo1.png" alt="">
             </div>
             <p>Your partner in digital growth. We help businesses scale through effective marketing strategies.</p>
           </div>
@@ -635,5 +635,6 @@
 </body>
 
 </html>
+
 
 
