--- a/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/index.html
@@ -215,9 +215,8 @@
                     <p>We provide top-notch digital marketing strategies including SEO, PPC, and Social Media Management to help you reach your audience and increase revenue.</p>
                   </div>
                   <div class="col-lg-12">
-                    <div class="gradient-button">
-                      <a href="#contact">Start Your Campaign Today</a>
-                      <br>
+                     <div class="white-button scroll-to-section">
+                      <a href="#contact">Start Your Campaign Today <i class="fas fa-envelope"></i></a>
                     </div>
                     <div class="white-button scroll-to-section">
                       <a href="#contact">Contact Us <i class="fas fa-envelope"></i></a>
@@ -635,6 +634,7 @@
 </body>
 
 </html>
+
 
 
 
