--- a/templatemo_570_chain_app_dev/index.html
+++ b/templatemo_570_chain_app_dev/index.html
@@ -488,13 +488,13 @@
       </div>
     </div>
   </div>
-  <footer id="newsletter">
+  <footer id="">
       <div class="row">
         <div class="col-lg-3">
           <div class="footer-widget">
             <h4>Contact Us</h4>
-            <p><a href="#">010-020-0340</a></p>
-            <p><a href="#">info@digitalmarketco.com</a></p>
+            <p><a href="#">+91-9131908958</a></p>
+            <p><a href="#">digidrive2109@gmail.com</a></p>
           </div>
         </div>
         <div class="col-lg-3">
@@ -509,7 +509,6 @@
             </ul>
             <ul>
               <li><a href="#">Careers</a></li>
-              <li><a href="#">Blog</a></li>
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
@@ -607,6 +606,7 @@
 </body>
 
 </html>
+
 
 
 
